[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Dash.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/DebugText.tscn" type="PackedScene" id=42]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 16, 18.5 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 608, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 60 ), SubResource( 65 ) ],
"loop": true,
"name": "Crouch",
"speed": 10.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "Dash",
"speed": 15.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "Fall",
"speed": 7.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "Run",
"speed": 20.0
}, {
"frames": [ SubResource( 66 ), SubResource( 66 ), SubResource( 67 ), SubResource( 51 ) ],
"loop": true,
"name": "Skid",
"speed": 8.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "toCrouch",
"speed": 7.0
}, {
"frames": [ SubResource( 52 ) ],
"loop": false,
"name": "toFall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 4.5, 10 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
JUMP_FORCE = -200
MAX_SPEED = 200
ACCELERATION = 5
FRICTION = 20

[node name="Dash" parent="." instance=ExtResource( 22 )]
position = Vector2( 1, 17 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="AreaShape" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 13.5 )
shape = SubResource( 34 )

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 15, 0 )

[node name="cameraUp" type="RayCast2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
enabled = true
cast_to = Vector2( 0, -100 )

[node name="cameraDown" type="RayCast2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="floorDetect" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 22 )

[node name="slopeDetect" type="RayCast2D" parent="."]
position = Vector2( 0, 25 )
enabled = true
cast_to = Vector2( 24, 0 )

[node name="groundDetectR" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 27, 0 )

[node name="groundDetectL" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( -27, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 20 )
frames = SubResource( 23 )
animation = "Idle"
frame = 2
playing = true
offset = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 22 )
shape = SubResource( 55 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
limit_smoothed = true
smoothing_enabled = true

[node name="DebugText" parent="." instance=ExtResource( 42 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
